@@ -1737,9 +1737,7 @@ return [
 			$languageCodes,
 			WikibaseRepo::getDataTypeDefinitions( $services )->getRdfTypeUris(),
 			$repoSettings->getSetting( 'pagePropertiesRdf' ) ?: [],
-			$repoSettings->getSetting( 'rdfDataRightsUrl' ),
-			$repoSettings->getSetting( 'tmpFixRdfSomevalueHash' ),
-			$repoSettings->getSetting( 'tmpFixRdfNodeNamespacePrefix' )
+			$repoSettings->getSetting( 'rdfDataRightsUrl' )
 		);
 	},
 
